syntax = "proto3";
package message;

import "google/protobuf/empty.proto";

// 订单请求参数
message OrderRequest {
    string orderId = 1;
    int64 timeStamp = 2;
}

// 订单信息
message OrderInfo {
    string OrderId = 1;
    string OrderName = 2;
    string OrderStatus = 3;
}

message Int32 {
    int32 value = 1;
}

message Bool {
    bool value = 1;
}

// 服务：OrderService
// 订单服务接口的定义 - 订单服务service定义（让客户端知道有什么服务 “输出方法” 可以调用！）
service OrderService { // service关键字
    // rpc 方法名称(输入消息) returns(输出消息） -->  rpc接口的参数和返回值必须是message类型
    rpc GetOrderInfo(OrderRequest) returns (OrderInfo); // rpc关键字（非流式）
    // rpc ChkHealthy(google.protobuf.Empty) returns (google.protobuf.Empty);
}