syntax = "proto3";
package Services;
import "Models.proto";

message ProdsRequest {
    int32 size = 1;
}

message ProdListResponse {
    repeated ProdModel data = 1; // repeated代表一个数组
}

service ProdService {
    rpc GetProdsList(ProdsRequest) returns(ProdListResponse);
}